kubernetes/apps/media/bazarr/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bazarr
spec:
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
